[project]
name = "panolaser"
version = "0.1.0"
description = "Training-Free Streaming 3D Reconstruction from Panoramic Video"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    # PyTorch Ecosystem (Relaxed for RunPod 2.4.0 compatibility)
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "xformers>=0.0.27.post2",
    
    # Core Math & Arrays
    "numpy==1.26.4",
    "scipy",
    "pandas",
    
    # Image Processing & Vision
    "opencv-python",
    "pillow",
    "imageio",
    "scikit-image",
    "kornia",
    
    # 3D & Geometry
    "open3d",
    "trimesh",
    "plyfile",
    "pypose",
    "evo",
    
    # Model & Training Utils
    "einops",
    "huggingface-hub",
    "safetensors",
    "scikit-learn",
    "tensorboard",
    
    # Configuration & System
    "hydra-core",
    "omegaconf",
    "yacs",
    "colorlog",
    "tqdm",
    "cython",
    "numba",
    
    # Web / UI
    "gradio==5.17.1",
    "fastapi==0.119.0",
    "flask==3.1.2",
    "plotly>=6.7.0",
]

# Tell uv where to find the CUDA 12.4 PyTorch wheels
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# Route the PyTorch ecosystem packages to the custom index
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
xformers = { index = "pytorch-cu124" }

# Inject PyTorch into the isolated build environment to prevent source-compilation crashes
[tool.uv.extra-build-dependencies]
xformers = ["torch>=2.4.0"]